# haferml

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.extras.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs-publish.yaml  publish.yaml  tests.yaml
changelog/: index.html
docs/: CNAME  changelog.md  index.md
docs/references/: index.md
docs/references/sync/: aws.md  (+2 more)
docs/tutorials/: index.md
haferml/: __init__.py  command.py
haferml/blend/: config.py
haferml/model/: dataset.py  modelset.py  pipeline.py  workflow.py
haferml/preprocess/: ingredients.py  pipeline.py
haferml/sync/: aws.py  local.py
haferml/texts/: validator.py  words.py
haferml/transforms/: dataframe.py
haferml/utils/: sugar.py
references/: index.html
references/blend/: index.html
references/command/: index.html
references/data/: index.html
references/etl/: index.html
references/lab/: index.html
references/model/: index.html
references/preprocess/: index.html
references/sync/: index.html
references/utils/: index.html
search/: search_index.json
tests/blend/: test_config.py
tests/data/: test_data_preprocessing_pipeline.py  test_wrangling.py
tests/etl/: test_data_preprocessing_pipeline.py  test_data_transformations_pipeline.py
tests/model/: test_pipeline.py
tests/preprocess/: test__with_transform.py
tests/transforms/: test_base.py
tutorials/: index.html
tutorials/build_models/: index.html
tutorials/data_manipulation/: index.html
tutorials/preservation/: index.html
(+79 files in other folders)
